fixed zomed in on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -21,12 +21,12 @@ nav ul {
 }
 nav ul li {
     display: inline-block;
-    margin-right: 20px;
     transition: transform 0.1s ease;
 }
 nav ul li a {
     color: #fff;
     text-decoration: none;
+    text-shadow: 0 0 5px rgb(0, 0, 0);
     padding: 10px 15px;
     display: block;
     transition: background-color 0.2s ease;
@@ -49,6 +49,15 @@ main {
     left: 0;
     z-index: -1;
 }
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+}
 #loading {
     position: fixed;
     top: 0;
@@ -66,15 +75,18 @@ main {
 
 #text {
     display: block;
+    width: 100%;
+}
+
+#content {
+    padding: 5%;
 }
 
 header {
     background-color: rgb(54, 54, 54, 0.7);
     width: fit-content;
-    padding: 10px 50px 10px 50px;
     margin-top: 50px;
-    margin-left: 30px;
-    margin-right: 30px;
+    padding: 10px 30px;
     border-radius: 10px;
 }
 
@@ -108,9 +120,6 @@ p {
     font-size: 32px;
 }
 
-#content {
-    margin-left: 50px;
-}
 
 @font-face {
     font-family: Prompt;
